<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="SHR_card_text">SHR Card</string>
    <string name="SHR_data_title_text">SHR Data</string>
    <string name="SHR_extracted_data_text">SHR extracted data</string>
    <string name="add_individual_observation_text">Add Individual Observation</string>
    <string name="app_name">mUzima</string>
    <string name="app_title">mUzima for Health Providers</string>
    <string name="captured_date">Captured Date:</string>
    <string name="card_sync_status_content_description">card_sync_status</string>
    <string name="change_settings">Change Settings</string>
    <string name="client_registration_question_text">Would you like to register client in mUzima ?</string>
    <string name="complex_obs">Complex Obs</string>
    <string name="concept_description">Concept Descrition</string>
    <string name="concept_details">Concept Details</string>
    <string name="concept_name">Concept Name:</string>
    <string name="confirm_duplicate_form_data_save">Save Duplicate Form Data</string>
    <string name="confirm_patient_id_exists">Does the client already have existing ID?</string>
    <string name="date_general">Date</string>
    <string name="date_temp">June 8</string>
    <string name="default_auto_save_interval" translatable="false">2</string>
    <string name="default_form_register">Registration Forms</string>
    <string name="default_server" translatable="false">http://demo2.muzima.org</string>
    <string name="done_general">DONE</string>
    <string name="downloading_cohorts_text">Downloading Cohorts</string>
    <string name="downloading_forms">Downloading Forms</string>
    <string name="encounter_date">Encounter Date:</string>
    <string name="encounter_date_dialog_label">Encounter Date</string>
    <string name="encounter_details">Encounter Details</string>
    <string name="encounter_location">Encounter Location:</string>
    <string name="encounter_type">Encounter Type:</string>
    <string name="enter_concept_name_text">Enter concept name …</string>
    <string name="enter_location_name">Enter location name …</string>
    <string name="enter_provider_name_hint">Enter provider name …</string>
    <string name="error_action_allow">Action not allowed while sync is in progress</string>
    <string name="error_audio_chose_activity_find">Error: Activity for choosing audio not found</string>
    <string name="error_audio_play_activity_find">Error: Activity for playing audio not found</string>
    <string name="error_audio_record_activity_find">Error: Activity for recording audio not found</string>
    <string name="error_authentication_fail">Authentication failed</string>
    <string name="error_authentication_occur">Authentication error occurred</string>
    <string name="error_client_download">Could not download clients</string>
    <string name="error_cohort_download">Could not download cohorts</string>
    <string name="error_cohort_fetch">Something went wrong while fetching cohorts from local repo</string>
    <string name="error_cohort_load">Could not load cohorts</string>
    <string name="error_concept_download">Could not download concepts</string>
    <string name="error_concept_fetch">Something went wrong while fetching concepts from local repo</string>
    <string name="error_concept_parse">An error occurred while parsing concepts in the form</string>
    <string name="error_connection_data_download">Connection error occurred while downloading data
    </string>
    <string name="error_credential_invalid">Invalid Username, Password, Server combination.
    </string>
    <string name="error_data_download">An error occurred while downloading data form server</string>
    <string name="error_data_save">An error occurred while saving data to local repo</string>
    <string name="error_empty_message_text">Cannot send empty message.</string>
    <string name="error_encounter_download">Could not download encounters</string>
    <string name="error_encounter_load">Encounters could not be loaded</string>
    <string name="error_encounter_observation_download">Could not download observations for clients</string>
    <string name="error_exception_data_load">Load exception has been thrown while loading data</string>
    <string name="error_exception_data_upload">Server could not process uploaded data</string>
    <string name="error_form_data_delete">Could not delete some form data</string>
    <string name="error_form_download">Could not download forms</string>
    <string name="error_form_fetch">Something went wrong while fetching forms from local repo</string>
    <string name="error_form_load">Could not load forms</string>
    <string name="error_form_load_fail">Could not load form</string>
    <string name="error_form_location_load">An error occurred while loading locations for the form</string>
    <string name="error_form_patient_data_exist">There is existing form data for selected form(s).
        Finish Incomplete data and sync Complete data to Server first before downloading the forms.
    </string>
    <string name="error_form_provider_load">An error occurred while loading provider for the form</string>
    <string name="error_form_save">An error occurred while saving the form</string>
    <string name="error_form_templates_download">Could not download form templates</string>
    <string name="error_image_capture_activity_unavailable">Error: Application for capturing an image not found</string>
    <string name="error_image_chose_activity_unavailable">Error: Application for choosing image not found</string>
    <string name="error_image_view_activity_unavailable">Error: Application for viewing image not found</string>
    <string name="error_local_connection_unavailable">Network connection not found</string>
    <string name="error_local_repo_data_delete">An error occurred while deleting data from local repo</string>
    <string name="error_location_download">Could not download locations</string>
    <string name="error_location_fetch">Something went wrong while fetching locations from local repo</string>
    <string name="error_notification_download">Error downloading notifications</string>
    <string name="error_notification_fetch">Something went wrong while fetching notifications from local repo</string>
    <string name="error_observation_download">Could not download observations</string>
    <string name="error_observation_fetch">Something went wrong while fetching observations from local repo</string>
    <string name="error_observation_form_save">An error occurred while saving observations in the form</string>
    <string name="error_observation_load">Observations could not be loaded</string>
    <string name="error_observation_unavailable">No observations Available</string>
    <string name="error_parse_exception_data_fetch">Parse exception has been thrown while fetching data</string>
    <string name="error_patient_data_form_exist">There is existing form data.
        Finish Incomplete data and sync Complete data to Server first before syncing form templates.
    </string>
    <string name="error_patient_download">Could not download clients</string>
    <string name="error_patient_encounter_download">Could not download encounters for clients</string>
    <string name="error_patient_fetch">An error occurred while fetching client</string>
    <string name="general_client_register">Register client</string>
    <string name="general_dashboard">Dashboard</string>
    <string name="general_help">Help</string>
    <string name="general_load">Load</string>
    <string name="general_login">Login</string>
    <string name="general_logout">Logout</string>
    <string name="general_medium">Medium</string>
    <string name="general_password">Password</string>
    <string name="general_server">Server</string>
    <string name="general_settings">Settings</string>
    <string name="general_tags">Tags</string>
    <string name="general_upload">Upload</string>
    <string name="general_username">Username</string>
    <string name="header_muzima_category">mUzima Settings</string>
    <string name="header_openmrs_category">OpenMRS Settings</string>
    <string name="header_provider_location_category">Provider/Location Settings</string>
    <string name="hint_authentication_progress">Authenticating…</string>
    <string name="hint_client_search">Search clients</string>
    <string name="hint_default_encounter_location">This selected encounter location will be the default encounter
        location for all forms
    </string>
    <string name="hint_default_encounter_provider">Logged-in user will be used as the default encounter provider
    </string>
    <string name="hint_duplicate_form_data_warning">Warn the user when duplicate form data for same client with same
        encounter date is being saved
    </string>
    <string name="hint_enable_GPS">Enable GPS Data collection feature</string>
    <string name="hint_enable_shr">Enable smart card feature</string>
    <string name="hint_form_auto_save_interval">The value in which your forms will be automatically saved</string>
    <string name="hint_manage_concept">Get more concepts from the server or remove concepts from this device.
        Concepts are used to configure what observations to download.
    </string>
    <string name="hint_manage_location">Get more locations from the server or remove locations from this device</string>
    <string name="hint_manage_provider">Get more providers from the server or remove providers from this device</string>
    <string name="hint_password_change">Did you change your password recently?</string>
    <string name="hint_real_time_sync">Enable real time synchronization of data</string>
    <string name="hint_require_medical_record_number">Require client\'s medical record number during registration
    </string>
    <string name="hint_server_password_prompt">Enter the OpenMRS password</string>
    <string name="hint_server_url">Server URL</string>
    <string name="hint_server_url_prompt">Please enter server URL</string>
    <string name="hint_session_timeout">If in-active for this time, mUzima will automatically logout</string>
    <string name="hint_username_prompt">Please enter username</string>
    <string name="menu_SHR_data_sync" formatted="false">Sync SHR data (%d)</string>
    <string name="menu_form_data_sync">Sync form data</string>
    <string name="no_default_encounter_location">No default encounter location</string>
    <string name="provider_reports_general">Provider Reports</string>
    <string name="scan_card_id_title">Scan card ID</string>
    <string name="title_client_scan">Scan Clients ID</string>
    <string name="title_default_encounter_location">Default Encounter Location</string>
    <string name="title_default_encounter_provider">Default encounter provider</string>
    <string name="title_duplicate_form_data_warning">Duplicate form data warning</string>
    <string name="title_enable_gps">Enable GPS</string>
    <string name="title_enable_shr">Enable SHR</string>
    <string name="title_font_size">Font size</string>
    <string name="title_form_auto_save_interval">Automatic form save interval (mins)</string>
    <string name="title_logo">MuzimaLogo</string>
    <string name="title_manage_concept">Manage concepts</string>
    <string name="title_manage_location">Manage locations</string>
    <string name="title_manage_provider">Manage providers</string>
    <string name="title_real_time_sync">Real time sync</string>
    <string name="title_require_medical_record_number">Require medical record number</string>
    <string name="title_session_timeout">Session timeout (mins)</string>
    <string name="write_SHR_to_card_text">Write SHR to Card</string>
    <string name="help_center">Help Center</string>
    <string name="title_light_mode">Enable Day Mode</string>
    <string name="hint_light_mode">Enable Light Theme</string>
</resources>