<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) The Trustees of Indiana University, Moi University
  ~ and Vanderbilt University Medical Center. All Rights Reserved.
  ~
  ~ This version of the code is licensed under the MPL 2.0 Open Source license
  ~ with additional health care disclaimer.
  ~ If the user is an entity intending to commercialize any application that uses
  ~ this code in a for-profit venture, please contact the copyright holder.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/header_openmrs_category">
        <EditTextPreference
            android:defaultValue="@string/default_server"
            android:dialogMessage="@string/hint_server_url_prompt"
            android:dialogTitle="@string/general_server"
            android:fontFamily="@font/montserrat_regular"
            android:key="@string/preference_server"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/general_server" />

    </PreferenceCategory>

    <EditTextPreference
        android:defaultValue="admin"
        android:dialogMessage="@string/hint_username_prompt"
        android:dialogTitle="@string/general_username"
        android:fontFamily="@font/montserrat_regular"
        android:key="@string/preference_username"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        android:title="@string/general_username" />

    <EditTextPreference
        android:defaultValue="test"
        android:dialogMessage="@string/hint_server_password_prompt"
        android:dialogTitle="@string/general_password"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPassword"
        android:key="@string/preference_password"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        android:title="@string/general_password" />

    <PreferenceCategory
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/header_muzima_category">
        <EditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/hint_session_timeout"
            android:dialogTitle="@string/title_session_timeout"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/timer_icon"
            android:inputType="number"
            android:key="@string/preference_timeout"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:selectAllOnFocus="true"
            android:title="@string/title_session_timeout" />
        <EditTextPreference
            android:defaultValue="@string/default_auto_save_interval"
            android:dialogMessage="@string/hint_form_auto_save_interval"
            android:dialogTitle="@string/title_form_auto_save_interval"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_auto_save_form_interval"
            android:inputType="number"
            android:key="@string/preference_auto_save_interval"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:selectAllOnFocus="true"
            android:title="@string/title_form_auto_save_interval" />
        <SwitchPreference
            android:defaultValue="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_real_time_sync"
            android:key="@string/preference_real_time_sync"
            android:summary="@string/hint_real_time_sync"
            android:title="@string/title_real_time_sync" />
        <SwitchPreference
            android:defaultValue="false"
            android:editable="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_medical_record_no"
            android:key="@string/preference_require_medical_record_number"
            android:summary="@string/hint_require_medical_record_number"
            android:title="@string/title_require_medical_record_number" />

        <SwitchPreference
            android:checked="true"
            android:defaultValue="true"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_warn_blue"
            android:key="@string/preference_duplicate_form_data_key"
            android:summary="@string/hint_duplicate_form_data_warning"
            android:title="@string/title_duplicate_form_data_warning" />

        <ListPreference
            android:defaultValue="@string/general_medium"
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_sizes"
            android:icon="@drawable/ic_action_font_blue"
            android:key="@string/preference_font_size"
            android:title="@string/title_font_size" />
        <SwitchPreference
            android:defaultValue="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_day_night"
            android:key="@string/preference_light_mode"
            android:summary="@string/hint_light_mode"
            android:title="@string/title_light_mode" />

        <SwitchPreference
            android:defaultValue="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_shr_blue"
            android:key="@string/preference_enable_shr_key"
            android:summary="@string/hint_enable_shr"
            android:title="@string/title_enable_shr" />
        <SwitchPreference
            android:defaultValue="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_action_enabled_gps"
            android:key="@string/preference_enable_gps_key"
            android:summary="@string/hint_enable_GPS"
            android:title="@string/title_enable_gps" />

        <ListPreference
            android:defaultValue="@string/language_english"
            android:entries="@array/app_language_entries"
            android:entryValues="@array/app_language_values"
            android:icon="@drawable/ic_action_language"
            android:key="@string/preference_app_language"
            android:title="@string/title_app_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/header_provider_location_category">
        <SwitchPreference
            android:defaultValue="false"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_default_provider"
            android:key="@string/preference_encounter_provider_key"
            android:summary="@string/hint_default_encounter_provider"
            android:title="@string/title_default_encounter_provider" />
        <Preference
            android:icon="@drawable/ic_action_providers_blue"
            android:summary="@string/hint_manage_provider"
            android:title="@string/title_manage_provider">
            <intent
                android:targetClass="com.muzima.view.preferences.ProviderPreferenceActivity"
                android:targetPackage="com.muzima" />
        </Preference>
        <ListPreference
            android:defaultValue="@string/no_default_encounter_location"
            android:icon="@drawable/ic_action_location_blue"
            android:key="@string/preference_default_encounter_location"
            android:summary="@string/hint_default_encounter_location"
            android:title="@string/title_default_encounter_location" />
        <Preference
            android:icon="@drawable/ic_action_edit_location"
            android:summary="@string/hint_manage_location"
            android:title="@string/title_manage_location">
            <intent
                android:targetClass="com.muzima.view.preferences.LocationPreferenceActivity"
                android:targetPackage="com.muzima" />
        </Preference>

    </PreferenceCategory>

        <Preference
            android:icon="@drawable/ic_concept"
            android:summary="@string/hint_manage_concept"
            android:title="@string/title_manage_concept">
            <intent
                android:targetClass="com.muzima.view.preferences.ConceptPreferenceActivity"
                android:targetPackage="com.muzima" />
        </Preference>

</PreferenceScreen>
