<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_tags"
        android:icon="@drawable/ic_labels"
        android:orderInCategory="2"
        custom:showAsAction="always"
        android:title="@string/general_client_register"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        custom:showAsAction="never"
        android:title="@string/general_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="2"
        custom:showAsAction="never"
        android:title="@string/general_help">
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        custom:showAsAction="never"
        android:title="@string/general_logout">
    </item>

</menu>
