<!--
  ~ Copyright (c) The Trustees of Indiana University, Moi University
  ~ and Vanderbilt University Medical Center. All Rights Reserved.
  ~
  ~ This version of the code is licensed under the MPL 2.0 Open Source license
  ~ with additional health care disclaimer.
  ~ If the user is an entity intending to commercialize any application that uses
  ~  this code in a for-profit venture,please contact the copyright holder.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/client_download_from_fhir"
        android:icon="@drawable/ic_fhir_download"
        android:title=""
        custom:showAsAction="always" />

    <item
        android:id="@+id/menu_tags"
        android:icon="?attr/icLabels"
        android:title="@string/general_tags"
        custom:showAsAction="never" />

    <item
        android:id="@+id/scan_SHR_card"
        android:icon="@drawable/ic_action_scan_card"
        android:title="@string/scan_card_id_title" />

    <item
        android:id="@+id/menu_client_add_icon"
        android:icon="?attr/icAddClient"
        android:title="@string/hint_client_search"
        custom:showAsAction="always" />

    <item
        android:id="@+id/bar_card_scan"
        android:icon="@drawable/barcode_icon"
        android:title="@string/title_client_scan"
        custom:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="?attr/icSearch"
        android:title="@string/hint_client_search"
        android:visible="false"
        custom:actionViewClass="android.support.v7.widget.SearchView"
        custom:showAsAction="always" />
    <item
        android:id="@+id/menu_dashboard"
        android:title="@string/general_dashboard"
        custom:showAsAction="never" />
    <item
        android:id="@+id/menu_client_add_text"
        android:title="@string/general_client_register"
        custom:showAsAction="never" />
    <item
        android:id="@+id/menu_complete_form_data"
        android:title="@string/menu_form_data_sync"
        custom:showAsAction="never" />
    <item
        android:id="@+id/clients_geomapping"
        android:icon="?attr/icNavigation"
        android:title=""
        custom:showAsAction="always" />
</menu>