<!--
  ~ Copyright (c) The Trustees of Indiana University, Moi University
  ~ and Vanderbilt University Medical Center. All Rights Reserved.
  ~
  ~ This version of the code is licensed under the MPL 2.0 Open Source license
  ~ with additional health care disclaimer.
  ~ If the user is an entity intending to commercialize any application that uses
  ~  this code in a for-profit venture,please contact the copyright holder.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">
	
	<item
			android:id="@+id/search"
			custom:actionViewClass="android.support.v7.widget.SearchView"
			android:icon="@drawable/ic_search"
			custom:showAsAction="always"
			android:title="@string/hint_client_search"/>
	
	<item
			android:id="@+id/obs_SHR_card_write"
			android:title="@string/write_SHR_to_card_text"
			android:icon="@drawable/ic_action_shr_card"
			custom:showAsAction="always"/>
	
	<item
			android:id="@+id/action_settings"
			android:orderInCategory="1"
			custom:showAsAction="never"
			android:title="@string/general_settings"/>
	<item
			android:id="@+id/action_help"
			android:orderInCategory="2"
			custom:showAsAction="never"
			android:title="@string/general_help">
	</item>
	<item
			android:id="@+id/action_logout"
			android:orderInCategory="3"
			custom:showAsAction="never"
			android:title="@string/general_logout">
	</item>
</menu>