<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        custom:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        custom:showAsAction="always"
        android:title="@string/hint_client_search"/>
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            custom:showAsAction="never"
            android:title="@string/general_settings"/>
    <item
            android:id="@+id/action_help"
            android:orderInCategory="2"
            custom:showAsAction="never"
            android:title="@string/general_help">
    </item>
    <item
            android:id="@+id/action_logout"
            android:orderInCategory="3"
            custom:showAsAction="never"
            android:title="@string/general_logout">
    </item>
</menu>