<!--
  ~ Copyright (c) 2014 - 2018. The Trustees of Indiana University, Moi University
  ~ and Vanderbilt University Medical Center.
  ~
  ~ This version of the code is licensed under the MPL 2.0 Open Source license
  ~ with additional health care disclaimer.
  ~ If the user is an entity intending to commercialize any application that uses
  ~  this code in a for-profit venture,please contact the copyright holder.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_SHR_data_sync"
            custom:showAsAction="never"
            android:visible="false"
            android:title="@string/menu_SHR_data_sync"/>
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        custom:showAsAction="never"
        android:title="@string/general_settings"/>
    <item
        android:id="@+id/action_provider_reports"
        android:orderInCategory="3"
        custom:showAsAction="never"
        android:title="@string/provider_reports_general"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="2"
        custom:showAsAction="never"
        android:title="@string/general_help">
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        custom:showAsAction="never"
        android:title="@string/general_logout">
    </item>
</menu>
