<!--
  ~ Copyright (c) The Trustees of Indiana University, Moi University
  ~ and Vanderbilt University Medical Center. All Rights Reserved.
  ~
  ~ This version of the code is licensed under the MPL 2.0 Open Source license
  ~ with additional health care disclaimer.
  ~ If the user is an entity intending to commercialize any application that uses
  ~  this code in a for-profit venture,please contact the copyright holder.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_client_add_icon"
            android:icon="@drawable/ic_action_add_client"
            android:orderInCategory="1"
            custom:showAsAction="never"
            android:title="@string/general_client_register"/>

    <item
            android:id="@+id/menu_tags"
            android:icon="@drawable/ic_labels"
            android:orderInCategory="2"
            custom:showAsAction="always"
            android:title="@string/general_tags"/>

    <item
            android:id="@+id/menu_load"
            android:title="@string/general_load"
            android:orderInCategory="10"
            custom:showAsAction="always"
            android:icon="@drawable/ic_refresh"/>

    <item
            android:id="@+id/menu_upload"
            android:title="@string/general_upload"
            android:orderInCategory="10"
            custom:showAsAction="always"
            android:icon="@drawable/ic_action_upload"
            android:visible="false"/>
</menu>
